--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	var Pattern = 'show'; // show: 横屏演示模式  dev: 竖屏开发模式
 	</script>
   <head>
-    <title>HiFond-h5</title>
+    <title>迄今为止,它是移动智慧医院最佳的线下补充</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="x5-orientation" content="portrait">
@@ -15,34 +15,148 @@
   </head>
   <body>
       <!-- Swiper -->
+  	<!--<iframe frameborder="0" scrolling="no" src="view/loading/index2.html" width="100%" height="100%"></iframe>-->
     <div class="loadingBox" id="loadingBox">
-    	<iframe frameborder="0" scrolling="no" src="view/loading/index2.html" width="100%" height="100%"></iframe>
+    	<div class="content">
+    		<div class="top">
+    			<img src="view/images/p9-2.png" alt="" />
+    		</div>
+    		<div class="bottom">
+    			<div class="out">
+    				<div class="in" id="in"></div>
+    			</div>
+    		</div>
+    	</div>
     </div>
     <script src="view/loading/js/loading.js"></script>
     <div class="swiper-container">
         <div class="swiper-wrapper">
+        	<!--末页-->
+        	<div class="swiper-slide">
+                <div class="floatContent p9">
+                	<div class="p9-text">
+                		<img class="p9-img" cui='cui' src="view/images/p9-2.png" alt="" />
+                		<h1 class="p9-h1" cui='cui'>广州海鹚科技网路科技有限公司</h1>
+                		<div class="p9-p" cui='cui'>
+                			<p cui='cui' style="margin-top: 1vh;">咨询电话：0731-89908011</p>
+	                		<p cui='cui'>公司总部：广州市天河区马场路庆亿街1号珠光国际中心A座706</p>
+	                		<p cui='cui'>公司官网：www.gzhc365.com</p>
+	                		<p cui='cui'>设备官网：www.minishebei.com</p>
+                		</div>
+                	</div>
+            	</div>
+            </div>
+            <script>
+//          	var inLine = document.getElementById('in');
+//				inLine.style.width = '20%';
+//				var loadText = document.querySelector('.loadText');
+//				loadText.innerHTML = '20%';
+            </script>
+            <!--互动页-->
+        	<div class="swiper-slide">
+                <div class="floatContent">
+                	<div class="p8-masking">
+                		<img src="view/images/p8-tip.png" alt="" />
+                	</div>
+                	<div class="p8-page">
+	                	<div class="p8">
+	                		<div class="left">
+		                		<p class="p8-l-p" cui='cui'>一机集成，满足需求。</p>
+		                		<img class="p8-l-img" cui='cui' src="view/images/p8-1.png" alt="" />
+		                	</div>
+		                	<div class="right">
+		                		<div class="p8-r-l" cui='cui'>
+		                			<p cui='cui' class="p8-t1" style="margin-top: 40%;">接触式芯片卡片读取</p>
+		                			<p cui='cui' class="p8-t2">非接触式卡片读取</p>
+		                			<p cui='cui' class="p8-t3">接触式磁条卡</p>
+		                			<p cui='cui' class="p8-t4">条形码/二维码扫描</p>
+		                		</div>
+		                		<div class="p8-img2" cui='cui'>
+		                			<img cui='cui' class="p8-line" src="view/images/p8-2.png" alt="" />
+		                			<img cui='cui' class="p8-img2-1" src="view/images/p8-3.png" alt="" />
+		                			<img cui='cui' class="p8-img2-2" src="view/images/p8-3.png" alt="" />
+		                			<img cui='cui' class="p8-img2-3" src="view/images/p8-3.png" alt="" />
+		                			<img cui='cui' class="p8-img2-4" src="view/images/p8-3.png" alt="" />
+		                		</div>
+		                		<div class="p8-l-r" cui='cui'>
+		                			<img cui='cui' class="sbk" src="view/images/p8-4.png" alt="" />
+		                			<img cui='cui' class="sfz" src="view/images/p8-5.png" alt="" />
+		                			<img cui='cui' class="jzk" src="view/images/p8-6.png" alt="" />
+		                			<div cui='cui' class="bottom">
+		                				<img cui='cui' class="txm" src="view/images/p8-7.png" alt="" />
+		                				<img cui='cui' class="ewm" src="view/images/p8-8.png" alt="" />
+		                			</div>
+		                		</div>
+		                	</div>
+	                	</div>
+	                	<div class="sfzPage">
+	                		<img class="sfz-1" src="view/images/sfz-1.png" alt="" />
+	                		<img class="sfz-2" src="view/images/sfz-2.png" alt="" />
+	                		<img class="sfz-3" src="view/images/sfz-img2.png" alt="" />
+	                		<div class="sfz-text">
+	            				<p>非接触式卡片读取</p>
+	            			</div>
+	            			<i>轻触空白处返回主页<img src="view/images/back.png" alt="" /></i>
+	                	</div>
+	                	<div class="sbkPage">
+	                		<img class="sbk-img2" src="view/images/sbk-img2.png" alt="" />
+	                		<img class="sbk-img1" src="view/images/sbk-1.png" alt="" />
+	                		<div class="sbk-text">
+	            				<p>社保卡卡片读取</p>
+	            			</div>
+	            			<i>轻触空白处返回主页<img src="view/images/back.png" alt="" /></i>
+	                	</div>
+	                	<div class="jzkPage">
+	                		<img class="jzk-1" src="view/images/jzk-1.png" alt="" />
+	                		<img class="jzk-2" src="view/images/jzk-2.png" alt="" />
+	                		<img class="jzk-3" src="view/images/jzk-3.png" alt="" />
+	                		<div class="jzk-text">
+	            				<p>接触式磁条卡</p>
+	            			</div>
+	            			<i>轻触空白处返回主页<img src="view/images/back.png" alt="" /></i>
+	                	</div>
+	                	<div class="ewmPage">
+	                		<img class="ewm-1" src="view/images/ewm-1.png" alt="" />
+	                		<img class="ewm-2" src="view/images/ewm-2.png" alt="" />
+	                		<img class="ewm-3" src="view/images/ewm-3.png" alt="" />
+	                		<img class="ewm-4" src="view/images/ewm-4.png" alt="" />
+	                		<div class="ewm-text">
+	            				<p>二维码扫描</p>
+	            			</div>
+	            			<i>轻触空白处返回主页<img src="view/images/back.png" alt="" /></i>
+	                	</div>
+	                </div>
+            	</div>
+            </div>
+            <script>
+//          	var inLine = document.getElementById('in');
+//				inLine.style.width = '30%';
+//				var loadText = document.querySelector('.loadText');
+//				loadText.innerHTML = '30%';
+            </script>
+        	<!--无线局域网-->
         	<div class="swiper-slide">
                 <div class="floatContent p6">
                 	<div class="left">
-                		<div class="p6-text">
-                			<span class="l-enter" cui='cui'>无线网络和全网通、蓝牙</span>
-	                		<p class="l-enter" cui='cui'>内置通讯，</p>
-	                		<p class="l-enter" cui='cui'>连接更多可能。</p>
-	                		<div class="part l-enter" cui='cui' style="margin-top: 25%;">
+                		<div class="p6-text" cui='cui'>
+                			<span cui='cui'>无线网络和全网通、蓝牙</span>
+	                		<p>内置通讯，</p>
+	                		<p>连接更多可能。</p>
+	                		<div class="part" style="margin-top: 25%;">
 	                			<img src="view/images/p6-3.png" alt="" />
 	                			<span>全网通</span>
 	                		</div>
-	                		<div class="part l-enter" cui='cui'>
+	                		<div class="part">
 	                			<img src="view/images/p6-2.png" alt="" />
 	                			<span>蓝牙</span>
 	                		</div>
-	                		<div class="part l-enter" cui='cui'>
+	                		<div class="part">
 	                			<img src="view/images/p6-4.png" alt="" />
 	                			<span>WI-FI</span>
 	                		</div>
                 		</div>
                 	</div>
-                	<div class="right" cui='cui'>
+                	<div class="p6-right" cui='cui'>
                 		<img class="p6-hu-3" src="view/images/p6-hu.png" alt="" />
                 		<img class="p6-hu-2" src="view/images/p6-hu.png" alt="" />
                 		<img class="p6-hu-1" src="view/images/p6-hu.png" alt="" />
@@ -50,21 +164,27 @@
                 	</div>
                 </div>
             </div>
+            <script>
+//          	var inLine = document.getElementById('in');
+//				inLine.style.width = '40%';
+//				var loadText = document.querySelector('.loadText');
+//				loadText.innerHTML = '40%';
+            </script>
         	<!--高清屏幕 前面背面-->
         	<div class="swiper-slide">
                 <div class="floatContent p5">
                 	<div class="left">
                 		<div class="p5-text" cui='cui'>
-                			<h5 cui='cui'>7.0"MIPI高清屏幕</h5>
-                			<h1 cui='cui'>迷你尺寸，</h1>
-                			<h1 cui='cui'>随遇而安</h1>
-                			<p cui='cui' style="margin-top: 30%;">150×187<i>mm</i></p>
-                			<span cui='cui'>屏幕尺寸</span>
-                			<p cui='cui'>800×1280</p>
-                			<span cui='cui'>屏幕分辨率</span>
+                			<h5>7.0"MIPI高清屏幕</h5>
+                			<h1>迷你尺寸，</h1>
+                			<h1>随遇而安</h1>
+                			<p style="margin-top: 30%;">150×187<i>mm</i></p>
+                			<span>屏幕尺寸</span>
+                			<p>800×1280</p>
+                			<span>屏幕分辨率</span>
                 		</div>
                 	</div>
-                	<div class="right">
+                	<div class="right" cui='cui'>
                 		<div class="p5-imgBox" cui='cui'>
                 			<div class="p5-img1">
                 				<img src="view/images/p5-1.png" alt="" />
@@ -75,7 +195,74 @@
                 		</div>
                 	</div>
         	    </div>
+           </div>
+           <script>
+//          	var inLine = document.getElementById('in');
+//				inLine.style.width = '50%';
+//				var loadText = document.querySelector('.loadText');
+//				loadText.innerHTML = '50%';
+            </script>
+            <!--hifond首页-->
+            <div class="swiper-slide">
+              <div class="floatContent p3">
+                <div class="p3-left">
+                	<div class="p3-img1" cui='cui'>
+                		<img src="view/images/p3-1.png" alt="" />
+                	</div>
+                	<div class="p3-img2" cui='cui'>
+                		<img src="view/images/p3-2.png" alt="" />
+                	</div>
+                	<div class="p3-img3" cui='cui'>
+                		<img src="view/images/p3-3.png" alt="" />
+                	</div>
+                </div>
+                <div class="p3-right">
+                	<div class="p3-text">
+                		<p class="p3-text-1" cui='cui'>HiFond迷你设备</p>
+                		<p class="p3-text-2" cui='cui'>崇尚迷你即是小而美</p>
+                		<p class="p3-text-3" cui='cui'>由大到小·由繁至简·由内而外</p>
+                		<p class="p3-text-4" cui='cui'>从此定义终端服务新标准</p>
+                	</div>
+                </div>
+              </div>
             </div>
+            <script>
+//          	var inLine = document.getElementById('in');
+//				inLine.style.width = '60%';
+//				var loadText = document.querySelector('.loadText');
+//				loadText.innerHTML = '60%';
+            </script>
+            <!--圈圈页-->
+            <div class="swiper-slide">
+                <div class="floatContent p7">
+                	<div class="p7-text" cui='cui'>
+                		<p>它所能承载的每一项就诊服务或功能</p>
+                		<p>都能够与移动智慧医院实现实时联动</p>
+                	</div>
+                	<div class="p7-imgBox" cui='cui'>
+                		<div class="line0">
+                			<img class="p7-img2" src="view/images/p7-3.png" alt="" />
+	                		<img class="p7-img1" src="view/images/p7-1.png" alt="" />
+	                		<img class="p7-img3" src="view/images/p7-5.png" alt="" />
+                		</div>
+                		<div class="line1">
+                			<img src="view/images/p7-6.png" alt="" />
+                		</div>
+                		<div class="line2">
+                			<img src="view/images/p7-4.png" alt="" />
+                		</div>
+                		<div class="line3">
+                			<img src="view/images/p7-2.png" alt="" />
+                		</div>
+                	</div>
+                </div>
+            </div>
+            <script>
+//          	var inLine = document.getElementById('in');
+//				inLine.style.width = '70%';
+//				var loadText = document.querySelector('.loadText');
+//				loadText.innerText = '70%';
+            </script>
             <!--轮播页面-->
         	<div class="swiper-slide">
               <div class="floatContent p4">
@@ -98,40 +285,22 @@
             						<img src="view/images/4-5.jpg"/>
             					</div>
             				</div>
-            				<div class="swiper-button-prev swiper-button-white" style="margin-left: 5vh;"></div>
-    						<div class="swiper-button-next swiper-button-white" style="margin-right: 5vh;"></div>
+            				<div class="swiper-button-prev swiper-button-white" style="margin-left: 27vh;"></div>
+    						<div class="swiper-button-next swiper-button-white" style="margin-right: 27vh;"></div>
     						<!--<div class="swiper-pagination"></div>-->
             			</div>
             		</div>
             		<div class="p4-bottom">
-        				<p cui='cui'>天生我能，面面俱到</p>
+        				<p class="p4-bottom-1" cui='cui'>天生我能，面面俱到</p>
         			</div>
               </div>
             </div>
-            <!--hifond首页-->
-            <div class="swiper-slide">
-              <div class="floatContent p3">
-                <div class="p3-left">
-                	<div class="p3-img1" cui='cui'>
-                		<img src="view/images/p3-1.png" alt="" />
-                	</div>
-                	<div class="p3-img2" cui='cui'>
-                		<img src="view/images/p3-2.png" alt="" />
-                	</div>
-                	<div class="p3-img3" cui='cui'>
-                		<img src="view/images/p3-3.png" alt="" />
-                	</div>
-                </div>
-                <div class="p3-right">
-                	<div class="p3-text">
-                		<p cui='cui'>HiFond迷你设备</p>
-                		<p cui='cui'>崇尚迷你即是小而美</p>
-                		<p cui='cui'>由大到小·由繁至简·由内而外</p>
-                		<p cui='cui'>从此定义终端服务新标准</p>
-                	</div>
-                </div>
-              </div>
-            </div>
+            <script>
+//          	var inLine = document.getElementById('in');
+//				inLine.style.width = '80%';
+//				var loadText = document.querySelector('.loadText');
+//				loadText.innerHTML = '80%';
+            </script>
             <!--四张图片浮动-->
             <div class="swiper-slide">
             	<div class="floatContent p2">
@@ -142,16 +311,16 @@
 	                </div>
 	                <div class="p2-bottom">
 	                	<div class="p2-img1" cui='cui'>
-	                		<img src="view/images/2-4.png" alt="" />
+	                		<img src="view/images/2-4-4.png" alt="" />
 	                	</div>
 	                	<div class="p2-img2" cui='cui'>
-	                		<img src="view/images/2-2.png" alt="" />
+	                		<img src="view/images/2-2-2.png" alt="" />
 	                	</div>
 	                	<div class="p2-img3" cui='cui'>
-	                		<img src="view/images/2-3.png" alt="" />
+	                		<img src="view/images/2-3-3.png" alt="" />
 	                	</div>
 	                	<div class="p2-img4" cui='cui'>
-	                		<img src="view/images/2-1.png" alt="" />
+	                		<img src="view/images/2-1-1.png" alt="" />
 	                	</div>
 	                </div>
 	                <div class="p2-bg" cui='cui'>
@@ -159,9 +328,14 @@
                 	</div>
                 </div>
             </div>
+            <script>
+//          	var inLine = document.getElementById('in');
+//				inLine.style.width = '50%';
+            </script>
             <!--画所有-->
             <div class="swiper-slide">
-              <div class="floatContent p1">
+              <div class="floatContent p1" style="overflow: hidden;">
+              	<img class="toNext" cui='cui' src="view/images/toNext.png" alt="" />
                 <div class="draftLine" cui="cui">
                 	<i class="draftLine1" cui="cui"></i>
                 	<i class="draftLine2" cui="cui"></i>
@@ -175,20 +349,20 @@
                 	<i class="i-b" cui="cui"></i>
                 	<i class="r-m-t" cui="cui"></i>
                 	<i class="r-m-b" cui="cui"></i>
-                	<div class="slide-card" cui="cui"></div>
+                	<div class="slideCard" cui="cui"></div>
                 	<div class="copy">
-                		<div class="outSildeBorder t-enter" cui="cui">
-                			<div class="midSildeBorder l-enter" cui="cui">
-                				<div class="inSildeBorder r-enter" cui="cui">
-                					<div class="iSildeBorder opacity-enter" cui="cui">
+                		<div class="outSildeBorder" cui="cui">
+                			<div class="midSildeBorder" cui="cui">
+                				<div class="inSildeBorder" cui="cui">
+                					<div class="iSildeBorder" cui="cui">
                 						<p>迄今为止</p>
                 						<p>它是移动智慧医院最佳的线下补充</p>
                 					</div>
                 					<div class="b-conent">
                 						<div class="logo">
-                							<img class="opacity-enter" cui="cui" src="view/images/hifond.png" alt="" />
+                							<img class="logoImg" cui="cui" src="view/images/hifond.png" alt="" />
                 						</div>
-                						<div class="sf-card opacity-enter" cui="cui">
+                						<div class="sf-card" cui="cui">
                 							<div class="sf-card-in">
                 								<div class="sf-card-in-in"></div>
                 							</div>
